--- a/index.html
+++ b/index.html
@@ -13,38 +13,14 @@
  
 <h1>nothing</h1>
  
-<script type="text/javascript">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	var _gaq = _gaq || [];
-	_gaq.push(['_setAccount', 'UA-51384-24']);
-	_gaq.push(['_trackPageview']);
-	_gaq.push(['_trackPageLoadTime']);
-
-	try {
-		if (document.referrer.match(/google\.com/gi) && document.referrer.match(/cd/gi)) {
-			var myString = document.referrer;
-			var r = myString.match(/cd=(.*?)&/);
-			var rank = parseInt(r[1]);
-			var kw = myString.match(/q=(.*?)&/);
-			
-			if (kw[1].length > 0) {
-				var keyWord = decodeURI(kw[1]);
-			}
-			else {
-				keyWord = "(not provided)";
-			}
-			
-			var p = document.location.pathname;
-			_gaq.push(['_trackEvent', 'RankTracker', keyWord, p, rank, true]);
-		}
-	}
-	catch(err){}
-	
-	(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	})();
+  ga('create', 'UA-51384-24', 'auto');
+  ga('send', 'pageview');
 
 </script>
  
